canary/02-canary/ingress-canary.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp
  namespace: webapp
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`c.labs.cometari.eu`)
      kind: Rule
      services:
        - name: webapp-canary
          kind: TraefikService
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp-canary
  namespace: webapp
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`c.labs.cometari.eu`) && HeadersRegexp(`X-Canary-Header`, `knock-knock`)
      kind: Rule
      middlewares:
        - name: wpusc-mnie
      services:
        - name: webapp-v2
          port: 3000
          kind: Service
  tls:
    certResolver: letsencrypt
